--- a/custom/read_graphs_compute_deg.ipynb
+++ b/custom/read_graphs_compute_deg.ipynb
@@ -62,147 +62,36 @@
     }
    ],
    "source": [
-    "from networkit import *\n",
-    "import pickle\n",
-    "import networkx as nx\n",
-    "from networkx.generators.community import LFR_benchmark_graph\n"
+    "from utils import *\n",
+    "import pickle"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def nx2nkit(g_nx):\n",
-    "    \n",
-    "    node_num = g_nx.number_of_nodes()\n",
-    "    g_nkit = Graph(directed=True)\n",
-    "    \n",
-    "    for i in range(node_num):\n",
-    "        g_nkit.addNode()\n",
-    "    \n",
-    "    for e1,e2 in g_nx.edges():\n",
-    "        g_nkit.addEdge(e1,e2)\n",
-    "        \n",
-    "    assert g_nx.number_of_nodes()==g_nkit.numberOfNodes(),\"Number of nodes not matching\"\n",
-    "    assert g_nx.number_of_edges()==g_nkit.numberOfEdges(),\"Number of edges not matching\"\n",
-    "        \n",
-    "    return g_nkit\n",
+    "file = \"./graphs/SF_5_graphs_10_nodes.pickle\"\n",
     "\n",
-    "def cal_exact_bet(g_nkit):\n",
+    "with open(file,\"rb\") as fopen:\n",
+    "    data = pickle.load(fopen)\n",
     "\n",
-    "    #exact_bet = nx.betweenness_centrality(g_nx,normalized=True)\n",
+    "graph = data[0][0]\n",
+    "g_nkit = nx2nkit(graph)\n",
+    "bet_dict = data[0][1]\n",
+    "deg_dict = cal_exact_degree(g_nkit)\n",
     "\n",
-    "    exact_bet = centrality.Betweenness(g_nkit,normalized=True).run().ranking()\n",
-    "    exact_bet_dict = dict()\n",
-    "    for j in exact_bet:\n",
-    "        exact_bet_dict[j[0]] = j[1]\n",
-    "    return exact_bet_dict\n",
+    "list_final = [graph,bet_dict,deg_dict]\n",
     "\n",
-    "def generate_bet_LFR_data1(num_of_graphs,output_path):\n",
-    "    #print(\"Computing Bet\")\n",
-    "    list_bet_data = list()\n",
-    "\n",
-    "    for i in range(num_of_graphs):\n",
-    "        print(f\"Graph index:{i+1}/{num_of_graphs}\",end='\\r')\n",
-    "        while True:\n",
-    "            try:\n",
-    "                g_nx = LFR_benchmark_graph(n=10000,tau1=3,tau2=1.5,mu=0.05,average_degree=6,min_community=20)\n",
-    "            except:\n",
-    "                continue\n",
-    "            else:\n",
-    "                break\n",
-    "        print(\"removing isolates\")\n",
-    "        if nx.number_of_isolates(g_nx)>0:\n",
-    "            #print(\"Graph has isolates.\")\n",
-    "            g_nx.remove_nodes_from(list(nx.isolates(g_nx)))\n",
-    "        \n",
-    "        g_nx = nx.convert_node_labels_to_integers(g_nx)\n",
-    "        g_nkit = nx2nkit(g_nx)\n",
-    "        bet_dict = cal_exact_bet(g_nkit)\n",
-    "\n",
-    "        list_bet_data.append([g_nx,bet_dict])\n",
-    "\n",
-    "    with open(output_path,\"wb\") as fopen:\n",
-    "        pickle.dump(list_bet_data,fopen)"
+    "with open(f\"{file[:-7]}_deg.pickle\",\"wb\") as fopen:\n",
+    "    pickle.dump(list_final,fopen)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Graph index:1/15\r"
-     ]
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mCanceled future for execute_request message before replies were done"
-     ]
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mEl Kernel se bloqueó al ejecutar código en la celda actual o en una celda anterior. Revise el código de las celdas para identificar una posible causa del error. Haga clic <a href='https://aka.ms/vscodeJupyterKernelCrash'>aquí</a> para obtener más información. Vea el [registro] de Jupyter (command:jupyter.viewOutput) para obtener más detalles."
-     ]
-    }
-   ],
-   "source": [
-    "# Create train graphs and save them to sf_train_50.pickle\n",
-    "num_of_graphs = 15\n",
-    "\n",
-    "output_path = f\"graphs/LFR_{num_of_graphs}_graphs.pickle\"\n",
-    "\n",
-    "generate_bet_LFR_data1(num_of_graphs,output_path)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from functions import *\n",
-    "import os\n",
-    "\n",
-    "# Create different test sizes datasets:\n",
-    "\n",
-    "sizes = [10000]\n",
-    "\n",
-    "num_of_graphs = 30\n",
-    "source_file = f\"graphs/bet/LFR_{num_of_graphs}_graphs.pickle\"\n",
-    "\n",
-    "num_train = 29\n",
-    "num_test = 1\n",
-    "num_copies = 15\n",
-    "\n",
-    "for size in set(sizes):\n",
-    "\n",
-    "    save_file = f\"./graphs/LFR_{num_of_graphs}_{size}\"\n",
-    "    get_split(source_file,num_train,num_test,num_copies,save_file,size)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "DeepLearning",
    "language": "python",
    "name": "python3"
   },
@@ -216,12 +105,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.7.13"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "dfc97523a541e5fc90d28dfb23d286d213900a0506c780bc879f2082aec02aa9"
+    "hash": "836981034a4078c9f81aa3bbf2605e6a2991c189feb0614c725b1b8d5991d7f7"
    }
   }
  },
