--- a/custom/test.ipynb
+++ b/custom/test.ipynb
@@ -2,10 +2,63 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing graphs: 5/5\n",
+      "Processing graphs: 50/50\n",
+      "Processing graphs: 100/100\n",
+      "Processing graphs: 200/200\n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/4d/f5lz4rj56ws3v2hlc19c60t80000gn/T/ipykernel_61181/2865061579.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m     \u001b[0mg\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgraphs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m     \u001b[0msize\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msizes\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     14\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mc\u001b[0m \u001b[0;32min\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m20\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m40\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+     ]
+    }
+   ],
+   "source": [
+    "from utils import *\n",
+    "from model_bet import *\n",
+    "import argparse\n",
+    "import pandas as pd\n",
+    "\n",
+    "\n",
+    "graphs = ['1-wiki-Vote','2-soc-Epinions','3-email-EuAll','4-web-Google']\n",
+    "sizes = [10000]#,100000,300000,900000]\n",
+    "out_input = []\n",
+    "for i in range(len(graphs)):\n",
+    "\n",
+    "    g = graphs[i]\n",
+    "    size = sizes[i]\n",
+    "\n",
+    "    for c in [1,10,20,40]:\n",
+    "\n",
+    "        data_train = f\"LFR_5_graphs_{c}_copies_{size}_size.pickle\"\n",
+    "        \n",
+    "        #Load training data\n",
+    "        with open(\"./data_splits/train/\"+data_train,\"rb\") as fopen:\n",
+    "            list_graph_train,list_n_seq_train,list_num_node_train,bc_mat_train = pickle.load(fopen)\n",
+    "\n",
+    "        #Get adjacency matrices from graphs\n",
+    "        list_adj_train,list_adj_t_train = graph_to_adj_bet(list_graph_train,list_n_seq_train,list_num_node_train,size)\n",
+    "        \n",
+    "        out_input.append({\"data\": data_train,\"size\":size,\"c\":c,\"list_adj_train\":list_adj_train,\"list_adj_t_train\":list_adj_t_train})\n",
+    "\n",
+    "with open(\"google_colab/google_data.pickle\",'wb') as fopen:\n",
+    "    pickle.dump(out_input,fopen)\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -34,7 +87,39 @@
      ]
     }
    ],
-   "source": []
+   "source": [
+    "\n",
+    "from model_bet import GNN_Bet\n",
+    "import torch\n",
+    "\n",
+    "with open(\"google_data.pickle\",'rb') as fopen:\n",
+    "    train_data = pickle.load(fopen)\n",
+    "\n",
+    "for trainset in train_data:\n",
+    "    for seed in 10:\n",
+    "\n",
+    "        list_adj_train = trainset[\"list_adj_train\"]\n",
+    "        list_adj_t_train = [\"list_adj_t_train\"]\n",
+    "        model_size= trainset[\"size\"]\n",
+    "        copies = trainset[\"c\"]\n",
+    "        seed = 1\n",
+    "\n",
+    "        torch.manual_seed(seed)\n",
+    "\n",
+    "        saving_path = f'LFR_5_graphs_{copies}_copies_{size}_size_{seed}_seed'\n",
+    "            \n",
+    "        #Model parameters\n",
+    "        hidden = 20\n",
+    "        device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "        model = GNN_Bet(ninput=model_size,nhid=hidden,dropout=0.6)\n",
+    "        model.to(device)\n",
+    "        optimizer = torch.optim.Adam(model.parameters(),lr=0.0005)\n",
+    "\n",
+    "        train(list_adj_train,list_adj_t_train,list_num_node_train,bc_mat_train,model=model,device=device,optimizer=optimizer,size=size)\n",
+    "        \n",
+    "        torch.save(model.state_dict(), saving_path)\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -46,7 +131,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "DeepLearning",
    "language": "python",
    "name": "python3"
   },
@@ -60,12 +145,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.7.13"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+    "hash": "836981034a4078c9f81aa3bbf2605e6a2991c189feb0614c725b1b8d5991d7f7"
    }
   }
  },
