--- a/custom/aux.ipynb
+++ b/custom/aux.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -62,264 +62,173 @@
     }
    ],
    "source": [
-    "import sys\n",
-    "sys.path.append(\"..\")\n",
-    "from utils import *\n",
-    "import os\n",
-    "os.chdir(\"..\")"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Reading real graphs and computing the betweenness centrality"
+    "from utils import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Bet computed and graph saved: ./delivery/real_graphs/bet_real_graphs/1-wiki-Vote.pickle\n",
-      "Bet computed and graph saved: ./delivery/real_graphs/bet_real_graphs/2-soc-Epinions.pickle\n",
-      "Bet computed and graph saved: ./delivery/real_graphs/bet_real_graphs/3-email-EuAll.pickle\n",
-      "Bet computed and graph saved: ./delivery/real_graphs/bet_real_graphs/4-web-Google.pickle\n"
-     ]
-    }
-   ],
-   "source": [
-    "def read_compute_target(in_path,out_path):\n",
-    "    \n",
-    "    #print(\"Computing Bet\")\n",
-    "    list_bet_data = list()\n",
-    "    g_nx = nx.read_edgelist(in_path, comments='#', nodetype=int)\n",
-    "    if nx.number_of_isolates(g_nx)>0:\n",
-    "        #print(\"Graph has isolates.\")\n",
-    "        g_nx.remove_nodes_from(list(nx.isolates(g_nx)))\n",
-    "\n",
-    "    g_nx = nx.convert_node_labels_to_integers(g_nx)\n",
-    "    g_nkit = nx2nkit(g_nx)\n",
-    "    bet_dict = cal_exact_bet(g_nkit)\n",
-    "    deg_dict = cal_exact_degree(g_nkit)\n",
-    "    list_bet_data.append([g_nx,bet_dict,deg_dict])\n",
-    "    \n",
-    "    with open(out_path,\"wb\") as fopen:\n",
-    "        pickle.dump(list_bet_data,fopen)\n",
-    "    \n",
-    "    print(f\"Bet computed and graph saved: {out_path}\")\n",
-    "\n",
-    "\n",
-    "networks = ['1-wiki-Vote','2-soc-Epinions','3-email-EuAll','4-web-Google']\n",
-    "\n",
-    "for net in networks:\n",
-    "    in_path_graph = f\"./real_graphs/original/{net}.txt\"\n",
-    "    out_path_graph = f\"./delivery/real_graphs/bet_real_graphs/{net}.pickle\"\n",
-    "    read_compute_target(in_path_graph,out_path_graph)"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## We create the datasets for the real graphs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "param = {\n",
-    "    \"adj_size\" : [10000,100000,300000,900000],\n",
-    "    \"graph_files\": ['1-wiki-Vote','2-soc-Epinions','3-email-EuAll','4-web-Google'],\n",
-    "    \"num_train\" : 0,\n",
-    "    \"num_test\" : 1,\n",
-    "    \"num_copies\": [1],\n",
-    "    \"split_seeds\": [10],\n",
-    "}\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
+    "def showing_zero_nodes(f):\n",
+    "    with open(f,'rb') as f:\n",
+    "        data = pickle.load(f)\n",
+    "    \n",
+    "    results = {}\n",
+    "    #for id in range(len(data)):\n",
+    "    for id in range(10):\n",
+    "        n = 0\n",
+    "        total_nodes = len(list(data[id][1].keys()))\n",
+    "        for key in data[id][1]:\n",
+    "            if data[id][1][key] == 0:\n",
+    "                n += 1\n",
+    "        results[id] = {'id': id, 'n': total_nodes, 'zeros': n, 'zeros_percentage': n/total_nodes*100}\n",
+    "        print(results[id])\n",
+    "    return results\n",
+    "    \n",
+    "def plotting(p,t):\n",
+    "    xs = [p[k]['id'] for k in list(p.keys())]\n",
+    "    ys = [p[k]['zeros_percentage'] for k in list(p.keys())]\n",
+    "    for i, v in enumerate(ys):\n",
+    "        plt.text(xs[i] - 0.3, v + 1.5, str(round(v,2)),fontsize='small')\n",
+    "    plt.bar(xs ,ys,color='lightcoral')\n",
+    "    plt.ylim(0,100)\n",
+    "    plt.title(t)\n",
+    "    plt.xlabel(\"Graph id\")\n",
+    "    plt.ylabel(\"Percentage of zero nodes\")\n",
+    "    plt.xticks(xs,[x+1 for x in xs])\n",
+    "    plt.savefig(t,dpi=300)\n",
     "\n",
-    "for idx,file in enumerate(param[\"graph_files\"]):\n",
-    "    for splitseed in param[\"split_seeds\"]:\n",
-    "        adj_size = param[\"adj_size\"][idx]\n",
-    "        random.seed(splitseed)\n",
-    "\n",
-    "        with open(f\"./delivery/real_graphs/bet_real_graphs/{file}.pickle\",\"rb\") as fopen:\n",
-    "            list_data = pickle.load(fopen)\n",
-    "\n",
-    "        num_graph = len(list_data)\n",
-    "        assert param[\"num_train\"]+param[\"num_test\"] == num_graph,\"Required split size doesn't match number of graphs in pickle file.\"\n",
-    "\n",
-    "        #For test split\n",
-    "        if param[\"num_test\"] > 0:\n",
-    "            random.seed(splitseed)\n",
-    "            list_graph, list_n_sequence, list_node_num, cent_mat, deg_mat = create_dataset(list_data[param[\"num_train\"]:param[\"num_train\"]+param[\"num_test\"]],num_copies = 1,adj_size=adj_size)\n",
-    "\n",
-    "            with open(f\"./delivery/data_splits/test/{file}_{param['num_test']}_test_{adj_size}_size_{splitseed}_splitseed.pickle\",\"wb\") as fopen:\n",
-    "                pickle.dump([list_graph,list_n_sequence,list_node_num,cent_mat, deg_mat],fopen)"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Generating scale-free graphs for training"
+    "    plt.clf()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Generating 5 SF graphs of 10 nodes\n",
-      "27/04/2023 17:05:30: Graph index:1/5\n",
-      "27/04/2023 17:05:30: Graph index:2/5\n",
-      "27/04/2023 17:05:30: Graph index:3/5\n",
-      "27/04/2023 17:05:30: Graph index:4/5\n",
-      "27/04/2023 17:05:30: Graph index:5/5\n",
-      "Generating 5 SF graphs of 100 nodes\n",
-      "27/04/2023 17:05:30: Graph index:1/5\n",
-      "27/04/2023 17:05:30: Graph index:2/5\n",
-      "27/04/2023 17:05:30: Graph index:3/5\n",
-      "27/04/2023 17:05:30: Graph index:4/5\n",
-      "27/04/2023 17:05:30: Graph index:5/5\n",
-      "Generating 5 SF graphs of 1000 nodes\n",
-      "27/04/2023 17:05:30: Graph index:1/5\n",
-      "27/04/2023 17:05:30: Graph index:2/5\n",
-      "27/04/2023 17:05:31: Graph index:3/5\n",
-      "27/04/2023 17:05:31: Graph index:4/5\n",
-      "27/04/2023 17:05:32: Graph index:5/5\n",
-      "Generating 5 SF graphs of 10000 nodes\n",
-      "27/04/2023 17:05:32: Graph index:1/5\n",
-      "27/04/2023 17:06:00: Graph index:2/5\n",
-      "27/04/2023 17:06:36: Graph index:3/5\n",
-      "27/04/2023 17:07:10: Graph index:4/5\n",
-      "27/04/2023 17:07:51: Graph index:5/5\n",
-      "Graphs saved\n"
+      "{'id': 0, 'n': 9119, 'zeros': 2, 'zeros_percentage': 0.02193222941111964}\n",
+      "{'id': 1, 'n': 5022, 'zeros': 1139, 'zeros_percentage': 22.68020708880924}\n",
+      "{'id': 2, 'n': 7911, 'zeros': 0, 'zeros_percentage': 0.0}\n",
+      "{'id': 3, 'n': 7460, 'zeros': 0, 'zeros_percentage': 0.0}\n",
+      "{'id': 4, 'n': 7800, 'zeros': 0, 'zeros_percentage': 0.0}\n",
+      "{'id': 5, 'n': 6984, 'zeros': 0, 'zeros_percentage': 0.0}\n",
+      "{'id': 6, 'n': 5258, 'zeros': 683, 'zeros_percentage': 12.98972993533663}\n",
+      "{'id': 7, 'n': 8955, 'zeros': 0, 'zeros_percentage': 0.0}\n",
+      "{'id': 8, 'n': 7685, 'zeros': 20, 'zeros_percentage': 0.2602472348731295}\n",
+      "{'id': 9, 'n': 8719, 'zeros': 0, 'zeros_percentage': 0.0}\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 432x288 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
+    "graph_type = 'ER'\n",
+    "num_of_graphs =  20\n",
+    "max_nodes = 10000\n",
+    "min_nodes = 5000\n",
+    "f = f\"./graphs/{graph_type}_{num_of_graphs}_graphs_{max_nodes}_{min_nodes}_nodes.pickle\"\n",
     "\n",
-    "\n",
-    "param = {\n",
-    "    \"nodes\": [10,100,1000,10000],\n",
-    "    \"num_of_graphs\": 5,\n",
-    "    \"graph_types\": [\"SF\"],\n",
-    "    \"generation_seeds\": [10]\n",
-    "}\n",
-    "\n",
-    "random.seed(10)\n",
-    "\n",
-    "for graph_type in param[\"graph_types\"]:\n",
-    "    for seed in param[\"generation_seeds\"]:\n",
-    "        for  nodes in param[\"nodes\"]:\n",
-    "\n",
-    "            print(f\"Generating {param['num_of_graphs']} {graph_type} graphs of {nodes} nodes\")\n",
-    "            list_bet_data = list()\n",
-    "            for i in range(param['num_of_graphs']):\n",
-    "                print(f\"{datetime.now().strftime('%d/%m/%Y %H:%M:%S')}: Graph index:{i+1}/{param['num_of_graphs']}\")\n",
-    "                g_nx = create_graph(graph_type,nodes,nodes+1)\n",
-    "                \n",
-    "                if nx.number_of_isolates(g_nx)>0:\n",
-    "                    g_nx.remove_nodes_from(list(nx.isolates(g_nx)))\n",
-    "                    g_nx = nx.convert_node_labels_to_integers(g_nx)\n",
-    "\n",
-    "                g_nkit = nx2nkit(g_nx)\n",
-    "                bet_dict = cal_exact_bet(g_nkit)\n",
-    "                deg_dict = cal_exact_degree(g_nkit)\n",
-    "                list_bet_data.append([g_nx,bet_dict,deg_dict])\n",
-    "\n",
-    "            fname_bet = f\"./delivery/graphs/{graph_type}_{param['num_of_graphs']}_graphs_{nodes}_nodes_{seed}_genseed.pickle\"    \n",
-    "\n",
-    "            with open(fname_bet,\"wb\") as fopen:\n",
-    "                pickle.dump(list_bet_data,fopen)\n",
-    "\n",
-    "print(\"Graphs saved\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Generating the different training splits using the SF graphs"
+    "p = showing_zero_nodes(f)\n",
+    "plotting(p,f'Betweenness({graph_type})')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "ename": "OSError",
-     "evalue": "[Errno 28] No space left on device",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mOSError\u001b[0m                                   Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/4d/f5lz4rj56ws3v2hlc19c60t80000gn/T/ipykernel_3046/3954823281.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     28\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     29\u001b[0m                         \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"./delivery/data_splits/train/SF_5_graphs_{nodes}_nodes_{genseed}_genseed_{param['num_train']}_train_{num_copies}_copies_{size}_size_{splitseed}_splitseed.pickle\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"wb\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mfopen\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 30\u001b[0;31m                             \u001b[0mpickle\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdump\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mlist_graph\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mlist_n_sequence\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mlist_node_num\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mcent_mat\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdeg_mat\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mfopen\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mOSError\u001b[0m: [Errno 28] No space left on device"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'id': 0, 'n': 8999, 'zeros': 7835, 'zeros_percentage': 87.0652294699411}\n",
+      "{'id': 1, 'n': 8647, 'zeros': 7607, 'zeros_percentage': 87.97270729732855}\n",
+      "{'id': 2, 'n': 7174, 'zeros': 6231, 'zeros_percentage': 86.85531084471704}\n",
+      "{'id': 3, 'n': 7335, 'zeros': 6415, 'zeros_percentage': 87.4573960463531}\n",
+      "{'id': 4, 'n': 8594, 'zeros': 7503, 'zeros_percentage': 87.3050965790086}\n",
+      "{'id': 5, 'n': 9408, 'zeros': 8140, 'zeros_percentage': 86.52210884353741}\n",
+      "{'id': 6, 'n': 7853, 'zeros': 6835, 'zeros_percentage': 87.03680122246276}\n",
+      "{'id': 7, 'n': 5778, 'zeros': 5024, 'zeros_percentage': 86.95050190377293}\n",
+      "{'id': 8, 'n': 6145, 'zeros': 5389, 'zeros_percentage': 87.6973148901546}\n",
+      "{'id': 9, 'n': 5218, 'zeros': 4587, 'zeros_percentage': 87.9072441548486}\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 432x288 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "param = {\n",
-    "    \"nodes\": [10,100,1000,10000],\n",
-    "    \"adj_size\" : [10000,100000,300000,900000],\n",
-    "    \"num_train\" : 5,\n",
-    "    \"num_test\" : 0,\n",
-    "    \"num_copies\": [1,10,20,40],\n",
-    "    \"split_seeds\": [0],\n",
-    "    \"generation_seeds\": [10]\n",
-    "}\n",
+    "graph_type = 'SF'\n",
+    "num_of_graphs =  20\n",
+    "max_nodes = 10000\n",
+    "min_nodes = 5000\n",
+    "f = f\"./graphs/{graph_type}_{num_of_graphs}_graphs_{max_nodes}_{min_nodes}_nodes.pickle\"\n",
     "\n",
-    "\n",
-    "for size in param[\"adj_size\"]:\n",
-    "    for nodes in param[\"nodes\"]:\n",
-    "        for num_copies in param[\"num_copies\"]:\n",
-    "            for genseed in param[\"generation_seeds\"]:\n",
-    "                for splitseed in param[\"split_seeds\"]:\n",
-    "        \n",
-    "                    with open(f\"./delivery/graphs/SF_5_graphs_{nodes}_nodes_{genseed}_genseed.pickle\",\"rb\") as fopen:\n",
-    "                        list_data = pickle.load(fopen)\n",
-    "\n",
-    "                    num_graph = len(list_data)\n",
-    "                    assert param[\"num_train\"]+param[\"num_test\"] == num_graph,\"Required split size doesn't match number of graphs in pickle file.\"\n",
-    "                \n",
-    "                    #For training split\n",
-    "                    if param[\"num_train\"] > 0:\n",
-    "                        random.seed(splitseed)\n",
-    "                        list_graph, list_n_sequence, list_node_num, cent_mat, deg_mat = create_dataset(list_data[:param[\"num_train\"]],num_copies = num_copies, adj_size=size)\n",
-    "\n",
-    "                        with open(f\"./delivery/data_splits/train/SF_5_graphs_{nodes}_nodes_{genseed}_genseed_{param['num_train']}_train_{num_copies}_copies_{size}_size_{splitseed}_splitseed.pickle\",\"wb\") as fopen:\n",
-    "                            pickle.dump([list_graph,list_n_sequence,list_node_num,cent_mat, deg_mat],fopen)\n"
+    "p = showing_zero_nodes(f)\n",
+    "plotting(p,f'Betweenness({graph_type})')"
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'id': 0, 'n': 8944, 'zeros': 0, 'zeros_percentage': 0.0}\n",
+      "{'id': 1, 'n': 7794, 'zeros': 523, 'zeros_percentage': 6.710289966641006}\n",
+      "{'id': 2, 'n': 7504, 'zeros': 0, 'zeros_percentage': 0.0}\n",
+      "{'id': 3, 'n': 5911, 'zeros': 9, 'zeros_percentage': 0.15225850109964473}\n",
+      "{'id': 4, 'n': 8031, 'zeros': 1183, 'zeros_percentage': 14.730419623957166}\n",
+      "{'id': 5, 'n': 5073, 'zeros': 10, 'zeros_percentage': 0.19712201852946973}\n",
+      "{'id': 6, 'n': 6728, 'zeros': 43, 'zeros_percentage': 0.6391200951248514}\n",
+      "{'id': 7, 'n': 6630, 'zeros': 3, 'zeros_percentage': 0.04524886877828054}\n",
+      "{'id': 8, 'n': 9299, 'zeros': 0, 'zeros_percentage': 0.0}\n",
+      "{'id': 9, 'n': 8432, 'zeros': 0, 'zeros_percentage': 0.0}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 432x288 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "## Train  and test using the different graph sets created"
+    "graph_type = 'GRP'\n",
+    "num_of_graphs =  20\n",
+    "max_nodes = 10000\n",
+    "min_nodes = 5000\n",
+    "f = f\"./graphs/{graph_type}_{num_of_graphs}_graphs_{max_nodes}_{min_nodes}_nodes.pickle\"\n",
+    "\n",
+    "p = showing_zero_nodes(f)\n",
+    "plotting(p,f'Betweenness({graph_type})')"
    ]
   },
   {
