--- a/custom/delivery/exp_3_scalability.ipynb
+++ b/custom/delivery/exp_3_scalability.ipynb
@@ -420,7 +420,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "DeepLearning",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -434,12 +434,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.10.5"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "836981034a4078c9f81aa3bbf2605e6a2991c189feb0614c725b1b8d5991d7f7"
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
    }
   }
  },
