--- a/delivery/exp_2_sf_real_graphs_performance.ipynb
+++ b/delivery/exp_2_sf_real_graphs_performance.ipynb
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -183,30 +183,38 @@
      "output_type": "stream",
      "text": [
       "Generating 5 SF graphs of 10 nodes\n",
-      "09/05/2023 18:28:56: Graph index:1/5\n",
-      "09/05/2023 18:28:56: Graph index:2/5\n",
-      "09/05/2023 18:28:56: Graph index:3/5\n",
-      "09/05/2023 18:28:56: Graph index:4/5\n",
-      "09/05/2023 18:28:56: Graph index:5/5\n",
+      "10/05/2023 19:41:49: Graph index:1/5\n",
+      "10/05/2023 19:41:49: Graph index:2/5\n",
+      "10/05/2023 19:41:49: Graph index:3/5\n",
+      "10/05/2023 19:41:49: Graph index:4/5\n",
+      "10/05/2023 19:41:49: Graph index:5/5\n",
       "Generating 5 SF graphs of 100 nodes\n",
-      "09/05/2023 18:28:56: Graph index:1/5\n",
-      "09/05/2023 18:28:56: Graph index:2/5\n",
-      "09/05/2023 18:28:56: Graph index:3/5\n",
-      "09/05/2023 18:28:56: Graph index:4/5\n",
-      "09/05/2023 18:28:56: Graph index:5/5\n",
+      "10/05/2023 19:41:49: Graph index:1/5\n",
+      "10/05/2023 19:41:49: Graph index:2/5\n",
+      "10/05/2023 19:41:49: Graph index:3/5\n",
+      "10/05/2023 19:41:49: Graph index:4/5\n",
+      "10/05/2023 19:41:49: Graph index:5/5\n",
       "Generating 5 SF graphs of 1000 nodes\n",
-      "09/05/2023 18:28:56: Graph index:1/5\n",
-      "09/05/2023 18:28:56: Graph index:2/5\n",
-      "09/05/2023 18:28:56: Graph index:3/5\n",
-      "09/05/2023 18:28:57: Graph index:4/5\n",
-      "09/05/2023 18:28:57: Graph index:5/5\n",
+      "10/05/2023 19:41:49: Graph index:1/5\n",
+      "10/05/2023 19:41:49: Graph index:2/5\n",
+      "10/05/2023 19:41:50: Graph index:3/5\n",
+      "10/05/2023 19:41:50: Graph index:4/5\n",
+      "10/05/2023 19:41:50: Graph index:5/5\n",
       "Generating 5 SF graphs of 10000 nodes\n",
-      "09/05/2023 18:28:57: Graph index:1/5\n",
-      "09/05/2023 18:29:37: Graph index:2/5\n",
-      "09/05/2023 18:30:17: Graph index:3/5\n",
-      "09/05/2023 18:30:56: Graph index:4/5\n",
-      "09/05/2023 18:31:29: Graph index:5/5\n",
-      "Graphs saved\n"
+      "10/05/2023 19:41:51: Graph index:1/5\n"
+     ]
+    },
+    {
+     "ename": "RuntimeError",
+     "evalue": "Received CTRL+C/SIGINT",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/4d/f5lz4rj56ws3v2hlc19c60t80000gn/T/ipykernel_59234/2861440083.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m                 \u001b[0mg_nkit\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnx2nkit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mg_nx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 26\u001b[0;31m                 \u001b[0mbet_dict\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcal_exact_bet\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mg_nkit\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     27\u001b[0m                 \u001b[0mdeg_dict\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcal_exact_degree\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mg_nkit\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     28\u001b[0m                 \u001b[0mlist_bet_data\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mg_nx\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mbet_dict\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mdeg_dict\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/Desktop/tfm/tfm-GNN-Ranking/delivery/functions/utils.py\u001b[0m in \u001b[0;36mcal_exact_bet\u001b[0;34m(g_nkit)\u001b[0m\n\u001b[1;32m    125\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mcal_exact_bet\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mg_nkit\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    126\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 127\u001b[0;31m     \u001b[0mexact_bet\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcentrality\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mBetweenness\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mg_nkit\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mnormalized\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mranking\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    128\u001b[0m     \u001b[0mexact_bet_dict\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    129\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mj\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mexact_bet\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32mnetworkit/base.pyx\u001b[0m in \u001b[0;36mnetworkit.base.Algorithm.run\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: Received CTRL+C/SIGINT"
      ]
     }
    ],
@@ -258,9 +266,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: './graphs/SF_5_graphs_10000_nodes_10_genseed.pickle'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/4d/f5lz4rj56ws3v2hlc19c60t80000gn/T/ipykernel_59234/796976114.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     17\u001b[0m                     \u001b[0mrandom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mseed\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msplitseed\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 19\u001b[0;31m                     \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"./graphs/SF_5_graphs_{nodes}_nodes_{genseed}_genseed.pickle\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"rb\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mfopen\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     20\u001b[0m                         \u001b[0mlist_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpickle\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfopen\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: './graphs/SF_5_graphs_10000_nodes_10_genseed.pickle'"
+     ]
+    }
+   ],
    "source": [
     "param = {\n",
     "    \"nodes\": [10,100,1000,10000],\n",
