--- a/delivery/exp_5_ablationtest_varying_embedding.ipynb
+++ b/delivery/exp_5_ablationtest_varying_embedding.ipynb
@@ -219,7 +219,123 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import matplotlib\n",
+    "\n",
+    "matplotlib.rcParams.update({'font.size': 10})\n",
+    "\n",
+    "\n",
+    "xs = range(1,8)\n",
+    "\n",
+    "# scale free\n",
+    "#title = 'Scale-free'\n",
+    "ys_1 = [0.9734,\t0.9752,\t0.976,\t0.9762,\t0.9763,\t0.9765,\t0.9762]\n",
+    "e_1 =  [0.0014,\t0.0017,\t0.002,\t0.0022,\t0.0026,\t0.0024,\t0.0024]\n",
+    "\n",
+    "# erdos renyi\n",
+    "#title = 'Erdos-Renyi'\n",
+    "#\n",
+    "#ys_1 = []\n",
+    "#e_1 =  []\n",
+    "ys_4 = [0.8798,\t0.8841,\t0.8862,\t0.8449,\t0.8524,\t0.8509,\t0.8669]\n",
+    "e_4 =  [0.0401,\t0.0358,\t0.0364,\t0.0714,\t0.096,\t0.1018,\t0.0741]\n",
+    "#ys_7 = [\n",
+    "#e_7 =  []\n",
+    "\n",
+    "\n",
+    "# GRP\n",
+    "#title = 'Gaussian Random Partition'\n",
+    "#\n",
+    "#ys_1 = []\n",
+    "#e_1 =  []\n",
+    "#ys_4 = []\n",
+    "#e_4 =  []\n",
+    "ys_7 = [0.7485,\t0.7913,\t0.8573,\t0.8419,\t0.8349,\t0.8278,\t0.7603]\n",
+    "e_7 =  [0.227,\t0.1625, 0.069,\t0.0911,\t0.1071,\t0.1099,\t0.2095]\n",
+    "\n",
+    "plt.errorbar(xs[:],ys_1[:],e_1[:])\n",
+    "plt.scatter(xs[:],ys_1[:],c='b')\n",
+    "plt.plot(xs[:],ys_1[:],c='b',label='Scalefree')\n",
+    "\n",
+    "plt.errorbar(xs[:],ys_4[:],e_4[:],c='darkred')\n",
+    "plt.scatter(xs[:],ys_4[:],c='darkred')\n",
+    "plt.plot(xs[:],ys_4[:],c='darkred',label='Erdos-Renyi')\n",
+    "\n",
+    "plt.errorbar(xs[:],ys_7[:],e_7[:],c='g')\n",
+    "plt.scatter(xs[:],ys_7[:],c='g')\n",
+    "plt.plot(xs[:],ys_7[:],c='g',label='Gaussian Random Partition')\n",
+    "\n",
+    "plt.ylabel(\"KT Score\")\n",
+    "plt.xlabel(\"No. of layers\")\n",
+    "plt.xticks(xs,xs)\n",
+    "plt.legend()\n",
+    "#plt.title(title)\n",
+    "plt.ylim([0.6,1])\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "\n",
+    "\n",
+    "xs = [4,8,12,16,20]\n",
+    "\n",
+    "# scale free\n",
+    "#title = 'Scale-free'\n",
+    "#ys_1 = [0.9706,\t0.9731,\t0.9736,\t0.9733,\t0.9734]\n",
+    "#e_1 =  [0.002,\t0.0015,\t0.0011,\t0.0014,\t0.0014]\n",
+    "#ys_4 = [0.9758,\t0.9766,\t0.9765,\t0.9764,\t0.9762]\n",
+    "#e_4 =  [0.0018,\t0.002,\t0.0023,\t0.0023,\t0.0022]\n",
+    "#ys_7 = [0.9759,\t0.9768,\t0.9765,\t0.9762,\t0.9762]\n",
+    "#e_7 =  [0.0023,\t0.0023,\t0.0022,\t0.0023,\t0.0024]\n",
+    "\n",
+    "\n",
+    "# erdos renyi\n",
+    "title = 'Erdos-Renyi'\n",
+    "ys_1 = [0.8577, 0.8724, 0.8786, 0.8812, 0.8798]\n",
+    "e_1 =  [0.0595, 0.0437, 0.0387, 0.0417, 0.0401]\n",
+    "ys_4 = [0.869, 0.8739, 0.8787, 0.8635, 0.8449]\n",
+    "e_4 =  [0.0553, 0.0368, 0.051, 0.0751, 0.0714]\n",
+    "ys_7 = [0.8815, 0.8593, 0.8706, 0.8596, 0.8669]\n",
+    "e_7 =  [0.043, 0.0512, 0.0652, 0.0995, 0.0741]\n",
+    "\n",
+    "\n",
+    "# GRP\n",
+    "#title = 'Gaussian Random Partition'\n",
+    "#ys_1 = [0.6548\t,0.7765\t,0.8231\t,0.775\t,0.7485]\n",
+    "#e_1 =  [0.3383\t,0.1815\t,0.109\t,0.1933\t,0.227]\n",
+    "#ys_4 = [0.7252\t,0.7747\t,0.8346\t,0.8196\t,0.8419]\n",
+    "#e_4 =  [0.2601\t,0.1777\t,0.098\t,0.116\t,0.0911]\n",
+    "#ys_7 = [0.8169\t,0.7813\t,0.7612\t,0.7388\t,0.7603]\n",
+    "#e_7 =  [0.1013\t,0.1781\t,0.21\t,0.2542\t,0.2095]\n",
+    "\n",
+    "plt.errorbar(xs[:],ys_1[:],e_1[:])\n",
+    "plt.scatter(xs[:],ys_1[:],c='b')\n",
+    "plt.plot(xs[:],ys_1[:],c='b',label='1-layered')\n",
+    "\n",
+    "plt.errorbar(xs[:],ys_4[:],e_4[:],c='g')\n",
+    "plt.scatter(xs[:],ys_4[:],c='g')\n",
+    "plt.plot(xs[:],ys_4[:],c='g',label='4-layered')\n",
+    "\n",
+    "plt.errorbar(xs[:],ys_7[:],e_7[:],c='darkred')\n",
+    "plt.scatter(xs[:],ys_7[:],c='darkred')\n",
+    "plt.plot(xs[:],ys_7[:],c='darkred',label='7-layered')\n",
+    "\n",
+    "plt.ylabel(\"KT Score\")\n",
+    "plt.xlabel(\"Embedding dimensions\")\n",
+    "plt.xticks(xs,xs)\n",
+    "plt.legend(loc=4)\n",
+    "plt.title(title)\n",
+    "plt.ylim([0.7,1])\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
