--- a/custom/exp_9_zero_analysis_generate_top_metrics.ipynb
+++ b/custom/exp_9_zero_analysis_generate_top_metrics.ipynb
@@ -210,7 +210,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Computing metrics for 50 and 5 training graphs experiments"
+    "### Computing metrics for 50 and 5 training graphs experiments"
    ]
   },
   {
